--- a/Inlämningsuppgift/index.html
+++ b/Inlämningsuppgift/index.html
@@ -43,10 +43,23 @@
         <a class="nav-link" href="#">Features</a>
         <a class="nav-link" href="#">Contact</a>
     </div>
-
+    </div>
     
 </div>
 </nav>
+<section id="showcase" class="bg-gray">
+    <div class="container">
+        <img src="" alt="">
+        <div>
+            <div>
+                <h1>Modern technologies ensure safety</h1>
+                <p>Our clinic is equipped with the highest quality medical and dental equipment, which allows for quick and effective treatment of the patient. </p>
+                <button>About our clininc</button>
+            </div>
+        </div>
+    </div>
+
+</section>
     
 </body>
 </html>
