--- a/Inlämningsuppgift/index.html
+++ b/Inlämningsuppgift/index.html
@@ -39,8 +39,9 @@
 
     <div class="collapse navbar-collapse">
         <div class="navbar-nav">
+        <a class="nav-link" href="#">Home</a>
         <a class="nav-link" href="#">About Us</a>
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Services</a>
         <a class="nav-link" href="#">Contact</a>
     </div>
     </div>
@@ -49,12 +50,13 @@
 </nav>
 <section id="showcase" class="bg-gray">
     <div class="container">
-        <img src="" alt="">
-        <div>
-            <div>
+        <img src="uppgift.svg" alt="">
+        <div class="content-box">
+            <div class="content">
+        
                 <h1>Modern technologies ensure safety</h1>
                 <p>Our clinic is equipped with the highest quality medical and dental equipment, which allows for quick and effective treatment of the patient. </p>
-                <button>About our clininc</button>
+                <button class="btn btn-greenish">About our clininc</button>
             </div>
         </div>
     </div>
