--- a/Inlämningsuppgift/index.html
+++ b/Inlämningsuppgift/index.html
@@ -56,7 +56,7 @@
         
                 <h1>Modern technologies ensure safety</h1>
                 <p>Our clinic is equipped with the highest quality medical and dental equipment, which allows for quick and effective treatment of the patient. </p>
-                <button class="btn btn-greenish">About our clininc</button>
+                <button class="btn btn-greenish">About our clinic</button>
             </div>
         </div>
     </div>
