--- a/Inlämningsuppgift/index.html
+++ b/Inlämningsuppgift/index.html
@@ -370,7 +370,8 @@
             <div class="center-content">
 
     <p>Do not wait and make an appointment today!</p>
-    <BUTTON>Book an appointment</BUTTON>
+    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+        Book an appointment</button>
 </div>
 </div>
 </div>
