--- a/Inlämningsuppgift/index.html
+++ b/Inlämningsuppgift/index.html
@@ -78,12 +78,15 @@
         </defs>
         <rect id="line" class="cls-1" width="450" height="4"/>
       </svg>
+    </div>
+    </div>
     
     
 
 
 <div class="grid">
-    <div>
+    <div class="content3">
+        <div class="mellanrun">
         <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
         <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
             <defs>
@@ -118,6 +121,7 @@
         and detection of broken teeth
         and other threats.</p></div>
     </div>
+</div>
     </button>
 <div>
     <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
